styles/tool.css
* {
    font-family: sans-serif;
}

body {
    background: #419F6C;
	overflow-x: auto;
	overflow-y: scroll;
    padding: 1vh 1vw;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}


.dropdown {
    position: relative;
	border-bottom: dotted black 1px;
}

.dropdown_content {
    display: none;
    position: absolute;
    background: white;
	width: 11em;
	
    border: solid 1px black;
    padding: 2px;

    color: black;
	font-size: 0.7em;
	text-align: left;
    top: 95%;
}

.dropdown:hover .dropdown_content {
    display: block;
	z-index: 10;
}

.menu-button {
    display: inline-block;
    background: darkgreen;
    color: white;
    
    width: 6em;
    height: 1em;
    
    border: solid black 0.5px;
    border-left: solid black 2px;
    border-bottom: solid black 2px;
    border-radius: 10px;
    
    margin-right: 0.25em;
    margin-bottom: 0.25em;
    padding: 0.25em 0.35em 0.35em;
    
    font-size: 0.875em;
    text-decoration: none;
    text-align: center;
}

.menu-button:last-child {
    margin-bottom: 3vh;
}

.menu-button:hover {
    background: lightgreen;
    color: black;
}

.menu-button:active {
    background: lightblue;
}

#content {
	clear: left;
	text-align: center;
}

h1 {
    font-size: 2em;
    text-decoration: underline;
	margin: 1vhpx;
}

.flow_block {
	display: inline-block;
	margin-right: 0.25em;
	margin-bottom: 0.25em;
	padding: 0px;
}

.simple_label {
	float: left;
	margin-right: 1em;
}

.simple_data {
	float: right;
}

#levels {
	margin: 3vh;
	text-align: center;
}

.player_info {
	width: 11em;
	height: 1.1em;
	
	border: solid black 1px;
	padding: 0.5em;
}

#masters {
	margin: 3vh 1vw;
	text-align: center;
}

.master {
	display: block;
	height: 1.1em;
	width: 6.75em;
	
	border: solid black 1px;
	padding: 0.5em;
}

.master_link {
	position: relative;
	bottom: 0.2em;
	text-align: left;
}

.master_link a {
	font-size: 0.7em;
	text-decoration: underline;
	color: black;
}

#wpelite {
	display: none;
	width: 14em;
	
	border: solid black 1px;
	padding: 0.5em;
}

.head_prompt {
	display: inline-block;
	
	border: solid black 1px;
	padding: 0.5em;
}

.task {
	padding: 0.75em;
    border: solid black 1px;
}

.task:first-child {
	margin-top: 3vh;
}

.thumbnail {
	height: 7.5em;
	width: 16em;
	margin-bottom: 0.75em;
}

.thumb_img {
	height:100%;
	max-width: 100%;
}

.elem {
	display: block;
	height: 2em;
	
	padding: 0.2em;
	margin-bottom: 0.1em;
	
	vertical-align: middle;
}

.elem:last-child {
	margin-bottom: 0px;
}

.label {
	float: left;
	display: block;
	width: 5em;
	margin: 0.5em 1em 0.5em 0px;
	text-align: left;
}

.task_name {
	color: black;
}

.poss {
	float: right;
	display: block;
	margin-top: 0.75em;
	margin-right: 5em;
}

.lit_pref {
	float: right;
	display: none;
	
	margin: 0px;
	margin-top: 0.4em;
}

.lit_pref input {
	width: 11em;
	text-align: left;
}

.range_pref {
	float: right;
	display: block;
	width: 9em;
	
	margin: 0px;
}

.pref_slider {
	float: right;
	width: 100%;
}

.extr {
	clear: right;
	position: relative;
	bottom: 2px;
	margin: 0px;
	font-size: 0.7em;
}

.bad {
	float: left;
}

.good {
	float: right;
}

#wildy {
	display: none;
}

.submission {
    text-align: center;
	margin-top: 5vh;
}

#error_popup {
	display: none;
	position: fixed;
	overflow: auto;
	left: 50%;
	top: 5%;
	
	width: 80%;
	max-width: 35em;
	height: 80%;
	
	margin-left: -40%;
	border: solid black 3px;
	padding: 0.5%;
	
	background: #f73d3d;
	text-align: center;
}

#error_popup p {
	overflow: auto;
	height: 90%;
	margin: 0px;
	margin-bottom: 1%;
	border: solid 1px black;
	text-align: left;
}

#close_err {
	margin-top: 1%;
}

#NYI {
	background: red;
}

